trying to fix horizontal scrolling issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,10 @@
   --background-end-rgb: 255, 246, 236;
 }
 
+*{
+  max-width: screen;
+}
+
 html {
   scroll-behavior: smooth;
   font-family: 'Raleway', sans-serif;
